Bug 1812078 - Part 1: Have separated clipboard caches for each clipbaord type to track clipboard owner; r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D167997